# api-fitness-foods-lc/app/Shared/DTO/GetErrorElasticsearchDTO.php
@@ -7,6 +7,11 @@ class GetErrorElasticsearchDTO extends DTOAbstract
     /**
      * @var string|null
      */
+    public ?string $index;
+
+    /**
+     * @var string|null
+     */
     public ?string $message;
 
     /**
@@ -15,18 +20,20 @@ class GetErrorElasticsearchDTO extends DTOAbstract
     public ?string $message_exception;
 
     /**
-     * @var string|null
+     * @var int|null
      */
-    public ?string $code;
+    public ?int $code;
 
     /**
+     * @param string|null $index
      * @param string|null $message
      * @param string|null $message_exception
-     * @param string|null $code
+     * @param int|null $code
      * @return GetErrorElasticsearchDTO
      */
-    public function register(?string $message = null, ?string $message_exception = null, ?string $code = null)
+    public function register(?string $index = null, ?string $message = null, ?string $message_exception = null, ?int $code = null)
     {
+        $this->index = $index;
         $this->message = $message;
         $this->message_exception = $message_exception;
         $this->code = $code;
